--- a/mini_robot_navigation/param/dwa_local_planner_params.yaml
+++ b/mini_robot_navigation/param/dwa_local_planner_params.yaml
@@ -1,42 +1,42 @@
 DWAPlannerROS:
 
 # Robot Configuration Parameters
-  max_vel_x: 1.5
+  max_vel_x: 0.55
   min_vel_x: 0.0
 
   max_vel_y: 0.0
   min_vel_y: 0.0
 
-  max_rot_vel: 0.2
-  min_rot_vel: 0.01
+  max_rot_vel: 0.8
+  min_rot_vel: 0.2
 
 # The velocity when robot is moving in a straight line
-  max_vel_trans:  1.5
+  max_vel_trans:  0.55
   min_vel_trans:  0.1
 
-  max_vel_theta: 0.2
-  min_vel_theta: 0.01
+  # max_vel_theta: 0.5
+  # min_vel_theta: 0.1
 
-  acc_lim_x: 2.5
+  acc_lim_x: 4.0
   acc_lim_y: 0.0
-  acc_lim_theta: 0.1 
+  acc_lim_theta: 4.0 
 
 # Goal Tolerance Parametes
-  xy_goal_tolerance: 0.05
-  yaw_goal_tolerance: 0.17
-  latch_xy_goal_tolerance: false
+  # xy_goal_tolerance: 0.05
+  # yaw_goal_tolerance: 0.17
+  latch_xy_goal_tolerance: true
 
 # Forward Simulation Parameters
-  sim_time: 1.7
-  sim_granularity: 0.025
-  vx_samples: 3
+  sim_time: 1.0
+  sim_granularity: 0.02
+  vx_samples: 20
   vy_samples: 0
-  vth_samples: 5
+  vth_samples: 40
   controller_frequency: 5.0
 
 # Trajectory Scoring Parameters
-  path_distance_bias: 0.05
-  goal_distance_bias: 0.05
+  path_distance_bias: 32
+  goal_distance_bias: 24
   occdist_scale: 0.01
   forward_point_distance: 0.325
   stop_time_buffer: 0.2
@@ -49,3 +49,58 @@ DWAPlannerROS:
 # Debugging
   publish_traj_pc : true
   publish_cost_grid_pc: true
+
+  holonomic_robot: false
+ 
+
+# TrajectoryPlannerROS:
+
+# # Robot Configuration Parameters
+#   max_vel_x: 1.5
+#   min_vel_x: 0.0
+
+#   max_vel_y: 0.0
+#   min_vel_y: 0.0
+
+#   max_rot_vel: 0.2
+#   min_rot_vel: 0.01
+
+# # The velocity when robot is moving in a straight line
+#   max_vel_trans:  1.5
+#   min_vel_trans:  0.1
+
+#   max_vel_theta: 0.2
+#   min_vel_theta: 0.01
+
+#   acc_lim_x: 2.5
+#   acc_lim_y: 0.0
+#   acc_lim_theta: 0.1 
+
+# # Goal Tolerance Parametes
+#   xy_goal_tolerance: 0.05
+#   yaw_goal_tolerance: 0.17
+#   latch_xy_goal_tolerance: false
+
+# # Forward Simulation Parameters
+#   sim_time: 1.7
+#   sim_granularity: 0.025
+#   vx_samples: 3
+#   vy_samples: 0
+#   vth_samples: 5
+#   controller_frequency: 5.0
+
+# # Trajectory Scoring Parameters
+#   path_distance_bias: 0.05
+#   goal_distance_bias: 0.05
+#   occdist_scale: 0.01
+#   forward_point_distance: 0.325
+#   stop_time_buffer: 0.2
+#   scaling_speed: 0.05
+#   max_scaling_factor: 0.2
+
+# # Oscillation Prevention Parameters
+#   oscillation_reset_dist: 1.0
+
+# # Debugging
+#   publish_traj_pc : true
+#   publish_cost_grid_pc: true  
