--- a/mini_robot_navigation/param/dwa_local_planner_params.yaml
+++ b/mini_robot_navigation/param/dwa_local_planner_params.yaml
@@ -7,36 +7,33 @@ DWAPlannerROS:
   max_vel_y: 0.0
   min_vel_y: 0.0
 
-  max_rot_vel: 0.8
-  min_rot_vel: 0.2
+  max_rot_vel: 1.0
+  min_rot_vel: 0.1
 
 # The velocity when robot is moving in a straight line
   max_vel_trans:  0.55
   min_vel_trans:  0.1
-
-  # max_vel_theta: 0.5
-  # min_vel_theta: 0.1
 
   acc_lim_x: 4.0
   acc_lim_y: 0.0
   acc_lim_theta: 4.0 
 
 # Goal Tolerance Parametes
-  # xy_goal_tolerance: 0.05
-  # yaw_goal_tolerance: 0.17
+  xy_goal_tolerance: 0.05
+  yaw_goal_tolerance: 0.17
   latch_xy_goal_tolerance: true
 
 # Forward Simulation Parameters
-  sim_time: 1.0
+  sim_time: 2.0
   sim_granularity: 0.02
   vx_samples: 20
   vy_samples: 0
   vth_samples: 40
-  controller_frequency: 5.0
+  #controller_frequency: 5.0
 
 # Trajectory Scoring Parameters
-  path_distance_bias: 32
-  goal_distance_bias: 24
+  path_distance_bias: 10
+  goal_distance_bias: 5
   occdist_scale: 0.01
   forward_point_distance: 0.325
   stop_time_buffer: 0.2
