👨🏻‍🏭 Tuning base local planner params

--- a/mini_robot_navigation/param/base_local_planner_params.yaml
+++ b/mini_robot_navigation/param/base_local_planner_params.yaml
@@ -6,7 +6,7 @@ TrajectoryPlannerROS:
 
   max_vel_theta:  0.5
   min_vel_theta: -0.5
-  min_in_place_vel_theta: 0.5
+  min_in_place_vel_theta: 0.4
 
   acc_lim_x: 1.0
   acc_lim_y: 0.0
@@ -24,3 +24,7 @@ TrajectoryPlannerROS:
   vx_samples: 18
   vtheta_samples: 20
   sim_granularity: 0.05
+
+# Trajectory Scoring Parameters
+  pdist_scale: 0.8
+  gdist_scale: 0.8
